# Claude45_Demo

./: .coverage  .gitignore  AGENTIC_SETUP_COMPLETE.md  API_INTEGRATION_SUMMARY.md  API_REPLACEMENT_COMPLETE.md  CODE_QUALITY_ENHANCEMENTS.md  FINAL_STATUS.md  MODULE_14_PROGRESS.md  MODULE_3_VERIFICATION.md  MODULE_4_VERIFICATION.md  MODULE_9_VERIFICATION.md  README.md  STUB_REPLACEMENT_COMPLETE.md  TESTING_GAP_ANALYSIS.md  TEST_STRATEGY.md  environment.yml  pyproject.toml
.agentic/: CONTEXT.md  EXAMPLES.md  README.md  SCHEMAS.md  WORKFLOW.md  initialization
.cache/: aker_platform.db
.github/workflows/: test.yml
.hypothesis/constants/: 0479a27863625bea  0597ddbca5743d02  07d5aa80fef7c8dc  14852d690091aab2  207b6ff0e045cd01  2ae0cf1f76a51cc5  2c4436873d6bf333  34ed6aaa6cafb2c1  41b46c91db4eda22  7dbaa2b498205c55  808e18072c874004  936751b25909a62b  adede0287dd22100  b08a56141ea6a99f  b92f363817d2d825  b95a1b36763b0e64  c30b85cc794c74db  c503a84a16fe00fe  d6d5b332fac956b8  f0ac75afa1305098
.hypothesis/examples/02c537ed0f6304c4/: 37d7b81bdaa0d7fb  c5eaa7d4587bbf7c
.hypothesis/examples/04e6b3400353b141/: 02c537ed0f6304c4  09b70792bafc007f  0ed80e6d65e4e660  cc7ed79a888d548a  e50fb886fdc254eb  e73f308e94e2fc1c  fc7c86506f60ba4c
.hypothesis/examples/0ed80e6d65e4e660/: 396130eabe22bfdb
.hypothesis/examples/fc7c86506f60ba4c/: 37d0cf2cd1c2a918
config/: cache_config.yaml
openspec/: project.md
openspec/changes/add-aker-investment-platform/: MODULE_10_GUIDE.md  MODULE_8_GUIDE.md  README.md  design.md  proposal.md  tasks.md
scripts/: dev_setup.sh
src/Claude45_Demo/: __init__.py
src/Claude45_Demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/Claude45_Demo/asset_evaluation/: __init__.py  amenities.py  capex.py  construction.py  deal_archetype.py  diligence.py  exit_strategy.py  operations.py  parking.py  portfolio.py  product_type.py  reporting.py  unit_mix.py
src/Claude45_Demo/cli/: __init__.py  main.py
src/Claude45_Demo/data_integration/: __init__.py  base.py  bea.py  bls.py  cache.py  cache_config.py  cache_stats.py  cache_warmer.py  census.py  config.py  drought_monitor.py  epa_aqs.py  epa_echo.py  epa_radon.py  exceptions.py  irs.py  landfire_fuel.py  lodes.py  memory_cache.py  nasa_firms.py  noaa_spc.py  prism_snow.py  rate_limiter.py  usfs_whp.py  usgs_nshm.py  validator.py  wui_classifier.py
src/Claude45_Demo/geo_analysis/: __init__.py  connectivity.py  elevation.py  isochrone.py  osm.py  outdoor_access.py  trails.py  transit.py  (+2 more)
tests/: conftest.py  test_basic.py
tests/e2e/: README.md  test_cache_workflow_e2e.py  test_market_analysis_e2e.py  test_market_screening_e2e.py  test_portfolio_e2e.py
tests/integration/: __init__.py  test_data_connectors.py
tests/load/: test_batch_screening.py
tests/mutation/: test_scoring_mutations.py
tests/performance/: benchmarks.py
tests/property/: test_property_based.py
tests/security/: __init__.py  test_api_key_security.py  test_credential_masking.py  test_input_sanitization.py
tests/test_asset_evaluation/: test_amenities.py  test_capex.py  test_construction.py  test_deal_archetype.py  test_diligence.py  test_exit_strategy.py  test_operations.py  test_parking.py  test_portfolio.py  test_product_type.py  test_reporting.py  test_unit_mix.py
tests/test_cli/: test_main.py
tests/test_data_integration/: __init__.py  test_base.py  test_bea.py  test_bls.py  test_cache.py  test_cache_config.py  test_cache_stats.py  test_cache_warmer.py  test_census.py  test_config.py  test_irs.py  test_lodes.py  test_memory_cache.py  test_rate_limiter.py  test_validator.py
tests/test_geo_analysis/: __init__.py  test_connectivity.py  test_elevation.py  test_isochrone.py  test_osm.py  test_outdoor_access.py  test_trails.py  test_transit.py  test_visualization.py  test_walkability.py
tests/test_market_analysis/: __init__.py  test_convenience.py  test_demographics.py  test_elasticity.py  test_employment.py  test_integration.py  test_report.py  test_supply_constraint.py
tests/test_risk_assessment/: test_air_quality.py  test_climate_projections.py  test_environmental.py  test_fema_flood.py  test_hazard_overlay.py  test_regulatory.py  test_risk_multiplier.py  test_risk_report.py  test_water_stress.py  test_wildfire.py
tests/test_scoring_engine/: __init__.py  test_scoring_engine.py
tests/test_state_rules/: __init__.py  test_colorado.py  test_idaho.py  test_integration.py  test_patterns.py  test_utah.py
tests/validation/: known_good_markets.json  sensitivity_analysis.py
web_gui/: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.api  README.md  app.py  docker-compose.yml  requirements.txt
web_gui/.streamlit/: config.toml  secrets.toml.example
web_gui/api/: main.py
web_gui/assets/: styles.css
web_gui/components/: __init__.py  charts.py  filters.py  tables.py
web_gui/pages/: 01_📊_Dashboard.py  02_🔍_Market_Screening.py  03_📍_Market_Details.py  04_💼_Portfolio.py  05_📊_Reports.py  06_💾_Data_Management.py  07_⚙️_Settings.py  08_📚_Help.py
web_gui/tests/: __init__.py  test_api.py
web_gui/utils/: __init__.py  api.py  auth.py  formatting.py  state.py
(+49 files in other folders)
